--- a/Dockerfile.multistage
+++ b/Dockerfile.multistage
@@ -3,7 +3,7 @@ FROM golang:1.14-alpine AS build_base
 RUN apk add --no-cache git
 
 # Set the Current Working Directory inside the container
-WORKDIR /tmp/go-sample-app
+WORKDIR /tmp/go-app
 
 # We want to populate the module cache based on the go.{mod,sum} files.
 COPY go.mod .
@@ -17,17 +17,17 @@ COPY . .
 RUN CGO_ENABLED=0 go test -v
 
 # Build the Go app
-RUN go build -o ./out/go-sample-app .
+RUN go build -o ./out/go-app .
 
 # Start fresh from a smaller image
 FROM alpine:3.9 
 RUN apk add ca-certificates
 
 
-COPY --from=build_base /tmp/go-sample-app/out/go-sample-app /app/go-sample-app
+COPY --from=build_base /tmp/go-app/out/go-app /app/go-app
 
 # This container exposes port 8080 to the outside world
 EXPOSE 5000
 
 # Run the binary program produced by `go install`
-CMD ["/app/go-sample-app"]
+CMD ["/app/go-app"]
